Fix concrete items tables valign

--- a/client/src/app/incomes/incomes.component.css
+++ b/client/src/app/incomes/incomes.component.css
@@ -10,3 +10,7 @@
 td i:hover {
     cursor: pointer;
 }
+
+tr td {
+    vertical-align: middle;
+}
